--- a/site/src/templates/menu.html
+++ b/site/src/templates/menu.html
@@ -17,18 +17,18 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="procurarDropdown">
                         <li>
-                            <a class="dropdown-item" href="/cliente">Clientes</a>
+                            <a class="dropdown-item" href="/anuncio/cliente">Clientes</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="/cliente">Serviços</a>
+                            <a class="dropdown-item" href="/anuncio/cliente">Serviços</a>
                         </li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">N/A</a>
+                    <a class="nav-link" href="/anuncio/cadastro">Anunciar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/cadastro">Cadastre-se</a>
+                    <a class="nav-link" href="/cadastro/cadastro">Cadastre-se</a>
                 </li>
             </ul>
         </div>
